@@ -27,6 +27,7 @@ import wx.stc
 import ed_glob
 import util
 import ed_msg
+import ed_menu
 from syntax.synglob import GetDescriptionFromId
 from eclib import ProgressStatusBar, EncodingDialog
 from extern.decorlib import anythread
@@ -51,6 +52,7 @@ class EdStatBar(ProgressStatusBar):
         self._widths = list()
         self._cleanup_timer = wx.Timer(self, EdStatBar.ID_CLEANUP_TIMER)
         self._eolmenu = wx.Menu()
+        self._lexmenu = None
         self._log = wx.GetApp().GetLog()
 
         # Setup
@@ -84,6 +86,10 @@ class EdStatBar(ProgressStatusBar):
 
     def OnDestroy(self, evt):
         """Unsubscribe from messages"""
+        if self._lexmenu:
+            self._lexmenu.Destroy()
+        if self._eolmenu:
+            self._eolmenu.Destroy()
         if evt.GetId() == self.GetId():
             ed_msg.Unsubscribe(self.OnProgress)
             ed_msg.Unsubscribe(self.OnUpdateText)
@@ -205,6 +211,14 @@ class EdStatBar(ProgressStatusBar):
             #       check to ensure reference is still valid.
             if dlg:
                 dlg.Destroy()
+        elif self.GetFieldRect(ed_glob.SB_LEXER).Contains(pt):
+            # Change Lexer popup menu
+            if self._lexmenu:
+                self._lexmenu.Destroy()
+            self._lexmenu = wx.Menu()
+            ed_menu.EdMenuBar.PopulateLexerMenu(self._lexmenu)
+            rect = self.GetFieldRect(ed_glob.SB_LEXER)
+            self.PopupMenu(self._lexmenu, (rect.x, rect.y))
         else:
             evt.Skip()
 
